src/objects/Target_Org__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <defaultValue>&apos;Greenday7956CRCR0LBEpLabeFJrkiypzfkFf&apos;</defaultValue>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <defaultValue>&apos;hubert.bogusz99@gmail.com&apos;</defaultValue>
        <label>Username</label>
        <type>Email</type>
    </fields>
    <label>Credentials</label>
</CustomObject>